Bug 323901 - KDE Plasma crash due to image wallpaper
Summary: KDE Plasma crash due to image wallpaper
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: wallpaper-image (other bugs)
Version First Reported In: 4.11.0
Platform: Mint (Ubuntu based) Linux
: NOR crash
Target Milestone: ---
Assignee: Paolo Capriotti
URL:
Keywords: drkonqi
: 324854 325255 325479 326235 326339 326717 327983 328195 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-08-22 17:54 UTC by Angelo Corsaro
Modified: 2013-11-29 03:35 UTC (History)
15 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.3
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (6.51 KB, text/plain)
2013-09-12 04:49 UTC, Wyatt Reid
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Angelo Corsaro 2013-08-22 17:54:37 UTC
Application: plasma-desktop (4.11.00)
KDE Platform Version: 4.11.00
Qt Version: 4.8.3
Operating System: Linux 3.9.11-custom x86_64
Distribution: Linux Mint 14 Nadia

-- Information about the crash:
- What I was doing when the application crashed:
I was readnig the mail using thunderbird

- Unusual behavior I noticed:
I'm doing nothing on the desktop

-- Backtrace:
Application: Shell del desktop di Plasma (plasma-desktop), signal: Floating point exception
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f225c3d6780 (LWP 4586))]

Thread 5 (Thread 0x7f223e366700 (LWP 4587)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f2255910987 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#2  0x00007f22559109b9 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#3  0x00007f2250000e9a in start_thread (arg=0x7f223e366700) at pthread_create.c:308
#4  0x00007f225bcceccd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7f21b16db700 (LWP 4588)):
#0  0x00007f225bcc18cd in read () at ../sysdeps/unix/syscall-template.S:82
#1  0x00007f224f93e15f in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f224f901914 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f224f901d22 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f224f901ea4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f22588b8c46 in QEventDispatcherGlib::processEvents (this=0x7f21ac0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#6  0x00007f22588892ef in QEventLoop::processEvents (this=this@entry=0x7f21b16dadd0, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007f2258889578 in QEventLoop::exec (this=0x7f21b16dadd0, flags=...) at kernel/qeventloop.cpp:204
#8  0x00007f225878ab40 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#9  0x00007f22588699df in QInotifyFileSystemWatcherEngine::run (this=0x1531d10) at io/qfilesystemwatcher_inotify.cpp:248
#10 0x00007f225878db1c in QThreadPrivate::start (arg=0x1531d10) at thread/qthread_unix.cpp:338
#11 0x00007f2250000e9a in start_thread (arg=0x7f21b16db700) at pthread_create.c:308
#12 0x00007f225bcceccd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#13 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f21a98d1700 (LWP 4590)):
#0  0x00007f225bcc3313 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f224f901d84 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f224f9021e2 in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f21aa3be4a6 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007f224f925645 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f2250000e9a in start_thread (arg=0x7f21a98d1700) at pthread_create.c:308
#6  0x00007f225bcceccd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#7  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f219bd97700 (LWP 4593)):
#0  0x00007f225bcc3313 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f224f901d84 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f224f901ea4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f22588b8c46 in QEventDispatcherGlib::processEvents (this=0x7f21940008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007f22588892ef in QEventLoop::processEvents (this=this@entry=0x7f219bd96dd0, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f2258889578 in QEventLoop::exec (this=0x7f219bd96dd0, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f225878ab40 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007f22588699df in QInotifyFileSystemWatcherEngine::run (this=0xd070b0) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f225878db1c in QThreadPrivate::start (arg=0xd070b0) at thread/qthread_unix.cpp:338
#9  0x00007f2250000e9a in start_thread (arg=0x7f219bd97700) at pthread_create.c:308
#10 0x00007f225bcceccd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f225c3d6780 (LWP 4586)):
[KCrash Handler]
#6  Image::nextSlide (this=0xa6fb30) at ../../../../../plasma/generic/wallpapers/image/image.cpp:788
#7  0x00007f21bb8ba89a in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=<optimized out>, _c=<optimized out>) at ./image.moc:127
#8  Image::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at ./image.moc:111
#9  0x00007f225889ff8f in QMetaObject::activate (sender=0xa6fce8, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#10 0x00007f225889f29c in QObject::event (this=0xa6fce8, e=<optimized out>) at kernel/qobject.cpp:1157
#11 0x00007f2257c31e9c in QApplicationPrivate::notify_helper (this=this@entry=0x991360, receiver=receiver@entry=0xa6fce8, e=e@entry=0x7ffff61fb4b0) at kernel/qapplication.cpp:4562
#12 0x00007f2257c3630a in QApplication::notify (this=0x9706c0, receiver=0xa6fce8, e=0x7ffff61fb4b0) at kernel/qapplication.cpp:4423
#13 0x00007f2259543906 in KApplication::notify (this=0x9706c0, receiver=0xa6fce8, event=0x7ffff61fb4b0) at ../../kdeui/kernel/kapplication.cpp:311
#14 0x00007f225888a59e in QCoreApplication::notifyInternal (this=0x9706c0, receiver=0xa6fce8, event=0x7ffff61fb4b0) at kernel/qcoreapplication.cpp:915
#15 0x00007f22588bb492 in sendEvent (event=0x7ffff61fb4b0, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#16 QTimerInfoList::activateTimers (this=0x997160) at kernel/qeventdispatcher_unix.cpp:611
#17 0x00007f22588b85b4 in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:186
#18 timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:180
#19 0x00007f22588b85d1 in idleTimerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:233
#20 0x00007f224f901ab5 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#21 0x00007f224f901de8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#22 0x00007f224f901ea4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#23 0x00007f22588b8c26 in QEventDispatcherGlib::processEvents (this=0x90c2c0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#24 0x00007f2257cd6c1e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#25 0x00007f22588892ef in QEventLoop::processEvents (this=this@entry=0x7ffff61fb730, flags=...) at kernel/qeventloop.cpp:149
#26 0x00007f2258889578 in QEventLoop::exec (this=0x7ffff61fb730, flags=...) at kernel/qeventloop.cpp:204
#27 0x00007f225888e738 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#28 0x00007f225bfd73f1 in kdemain (argc=1, argv=0x7ffff61fba28) at ../../../../plasma/desktop/shell/main.cpp:126
#29 0x00007f225bbfc76d in __libc_start_main (main=0x4006a0 <main(int, char**)>, argc=1, ubp_av=0x7ffff61fba28, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffff61fba18) at libc-start.c:226
#30 0x00000000004006d1 in _start ()

Possible duplicates by query: bug 319341.

Reported using DrKonqi
Comment 1 Dominik Haumann 2013-08-30 21:55:52 UTC
Are you using an nvidia driver? If so, this is probably a duplicate of bug #319341.
Comment 2 Wyatt Reid 2013-09-12 04:49:41 UTC
Created attachment 82292 [details]
New crash information added by DrKonqi

plasma-desktop (4.11.1) on KDE Platform 4.11.1 using Qt 4.8.4

- What I was doing when the application crashed:

This occurs whenever I log into my computer if my desktop image is anything on my storage, or is non-stock.

-- Backtrace (Reduced):
#6  Image::nextSlide (this=0x232be40) at ../../../../../plasma/generic/wallpapers/image/image.cpp:788
#7  0x00007f22f227e6a5 in Image::qt_static_metacall (_o=0x232be40, _id=0, _a=0x0, _c=<optimized out>) at ./image.moc:127
[...]
#9  0x00007f230a899be1 in QObject::event (this=0x232bff8, e=<optimized out>) at kernel/qobject.cpp:1156
#10 0x00007f2309c1edfc in QApplicationPrivate::notify_helper (this=this@entry=0x1ff2930, receiver=receiver@entry=0x232bff8, e=e@entry=0x7fff8129e7b0) at kernel/qapplication.cpp:4567
#11 0x00007f2309c25470 in QApplication::notify (this=this@entry=0x1febbf0, receiver=receiver@entry=0x232bff8, e=e@entry=0x7fff8129e7b0) at kernel/qapplication.cpp:4353
Comment 3 Angelo Corsaro 2013-09-13 09:55:51 UTC
Using the Wyatt suggestion, I switched to a stock picture and I have no one crash.
Before I'm using a slideshow and every new image used as wallpaper, raise the crash.
Comment 4 Jekyll Wu 2013-09-24 14:43:24 UTC
*** Bug 325255 has been marked as a duplicate of this bug. ***
Comment 5 Jekyll Wu 2013-10-01 00:47:30 UTC
*** Bug 325479 has been marked as a duplicate of this bug. ***
Comment 6 Ian Turner 2013-10-15 11:45:34 UTC
I'm seeing this with plasma-desktop 4:4.11.2-0ubuntu1~ubuntu12.04~ppa1. I have an nvidia card with optimus but it is disabled; I am using the Intel chip instead.

Other benavior is as described earlier: Slideshow crashes, static wallpaper is OK; stacktrace appears the same.
Comment 7 Jekyll Wu 2013-10-18 23:04:54 UTC
*** Bug 326235 has been marked as a duplicate of this bug. ***
Comment 8 Christoph Feck 2013-10-21 12:29:18 UTC
Can you confirm that it only crashes when you are using a single image for the "slideshow"?
Comment 9 Ian Turner 2013-10-21 12:38:09 UTC
I only have a single image in my configuration. It is usually replaced periodically by a script, but I see the crash even if the script is disabled.
Comment 10 rich.peiffer 2013-10-21 13:39:57 UTC
Confirmed.  I was using the "slideshow" feature to display a single
image that was updated periodically (xplanet - showing cloud overlay).
When I add an additional image to the directory (so it swaps between the
two), there is no crash...

On Mon, 2013-10-21 at 12:29 +0000, Christoph Feck wrote:
> https://bugs.kde.org/show_bug.cgi?id=323901
> 
> Christoph Feck <christoph@maxiom.de> changed:
> 
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
>                  CC|                            |christoph@maxiom.de
> 
> --- Comment #8 from Christoph Feck <christoph@maxiom.de> ---
> Can you confirm that it only crashes when you are using a single image for the
> "slideshow"?
>
Comment 11 Angelo Corsaro 2013-10-21 14:07:01 UTC
Confirmed and the same behaviour (xplanet - showing cloud overlay).

Regards
Angelo


On 21/10/2013 15:39, rich.peiffer@gmail.com wrote:
> https://bugs.kde.org/show_bug.cgi?id=323901
>
> --- Comment #10 from rich.peiffer@gmail.com ---
> Confirmed.  I was using the "slideshow" feature to display a single
> image that was updated periodically ().
> When I add an additional image to the directory (so it swaps between the
> two), there is no crash...
>
> On Mon, 2013-10-21 at 12:29 +0000, Christoph Feck wrote:
>> https://bugs.kde.org/show_bug.cgi?id=323901
>>
>> Christoph Feck <christoph@maxiom.de> changed:
>>
>>             What    |Removed                     |Added
>> ----------------------------------------------------------------------------
>>                   CC|                            |christoph@maxiom.de
>>
>> --- Comment #8 from Christoph Feck <christoph@maxiom.de> ---
>> Can you confirm that it only crashes when you are using a single image for the
>> "slideshow"?
>>
Comment 12 Christoph Feck 2013-10-21 15:36:53 UTC
*** Bug 324854 has been marked as a duplicate of this bug. ***
Comment 13 Christoph Feck 2013-10-21 16:13:48 UTC
Git commit 9f581d0cdf3423135be3283137fd1370f1d9303f by Christoph Feck.
Committed on 21/10/2013 at 16:11.
Pushed by cfeck into branch 'KDE/4.11'.

Fix crash with a single wallpaper "slideshow"

To avoid the last image shown again, it was removed
from the list of next images to show. If, however, it
was the only image, no images were left.
FIXED-IN: 4.11.3
REVIEW: 113368

M  +5    -0    plasma/generic/wallpapers/image/image.cpp

http://commits.kde.org/kde-workspace/9f581d0cdf3423135be3283137fd1370f1d9303f
Comment 14 Kerry N 2013-10-21 18:28:39 UTC
Plasma used to crash once a day or so. I have a script creating symlinks in a directory to random images and use that directory as the source for a slideshow. The script deletes the old symlink and creates a new one pointing to a different image.

After I manually created an additional symlink to the symlink, so that there was never less than 2 files in that directory, I haven't had a crash in a week or more.
Comment 15 Jekyll Wu 2013-10-27 09:39:39 UTC
*** Bug 326717 has been marked as a duplicate of this bug. ***
Comment 16 Klaus Kettner 2013-10-27 11:53:44 UTC
*** Bug 326339 has been marked as a duplicate of this bug. ***
Comment 17 Christoph Feck 2013-11-23 18:59:41 UTC
*** Bug 327983 has been marked as a duplicate of this bug. ***
Comment 18 Jekyll Wu 2013-11-29 03:35:24 UTC
*** Bug 328195 has been marked as a duplicate of this bug. ***