Fix crash with a single wallpaper "slideshow"

To avoid the last image shown again, it was removed
from the list of next images to show. If, however, it
was the only image, no images were left.

BUG: 323901
FIXED-IN: 4.11.3
REVIEW: 113368